# libdiagnose

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  example.cpp
diagnose/: diagnostics.hpp  source_location.hpp  string_helpers.hpp
